PATCH [3/7] drivers: touchscreen: pinctrl usage
Add pinctrl state definitions and start using them in atmel
touchscreen driver.

Change-Id: Ie260e060eb73be0116b82614d2996b11007ac156
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.mot.com/635503
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Reviewed-by: Konstantin Makariev <kmakariev@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-mot-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-pinctrl.dtsi
@@ -97,6 +97,37 @@
 			};
 		};
 
+		touch_irq {
+			qcom,pins = <&gp 84>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <0>;
+			label = "touch_irq";
+			touch_irq_default: default {
+				bias-pull-down;
+				drive-strength = <6>;
+			};
+			touch_irq_active: active {
+				bias-pull-up;
+				drive-strength = <6>;
+			};
+		};
+
+		touch_reset {
+			qcom,pins = <&gp 97>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <0>;
+			label = "touch_reset";
+			touch_reset_default: default {
+				bias-disable;
+				output-low;
+				drive-strength = <6>;
+			};
+			touch_reset_active: active {
+				bias-pull-up;
+				drive-strength = <6>;
+			};
+		};
+
 		tmp108_irq {
 			qcom,pins = <&gp 60>;
 			qcom,num-grp-pins = <1>;
