--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -910,6 +910,9 @@
 		touch_avdd-supply = <&pma8084_l19>;
 		atmel,key-buttons = <59 61 60 0 0 0 0 0>; /* KEY_F1,F2,F3 */
 		atmel,suspend-method-lpm;
+		pinctrl-names = "default", "active";
+		pinctrl-0 = <&touch_irq_default &touch_reset_default>;
+		pinctrl-1 = <&touch_irq_active &touch_reset_active>;
 		atmel,cfg {
 			atmel,family-id = <0xa4>;
 			atmel,variant-id = <0x7>;
