PATCH [6/7] drivers: camera: pinctrl usage
Add pinctrl state definitions and start using them in
camera driver.

Change-Id: I6708ffbfecfb66c23e3112971f2635cb57521b3f
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.mot.com/635530
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
@@ -12,6 +12,9 @@
  */
 
 &cci {
+	pinctrl-names = "default", "active";
+	pinctrl-0 = <&cam_i2c_default>;
+	pinctrl-1 = <&cam_i2c_active>;
 
 	rohm_bu64296gwx: qcom,actuator@18 {
 		cell-index = <1>;
@@ -36,6 +39,9 @@
 		qcom,gpio-req-tbl-label = "FLASH_EN";
 		qcom,cci-master = <0>;
 		flash-now-support = <0>;
+		pinctrl-names = "default", "active";
+		pinctrl-0 = <&cam_flash_default>;
+		pinctrl-1 = <&cam_flash_active>;
 	};
 
 	qcom,camera@20 {
@@ -78,6 +84,9 @@
 		qcom,sensor-type = <0>;
 		qcom,cci-master = <0>;
 		status = "ok";
+		pinctrl-names = "default", "active";
+		pinctrl-0 = <&cam_mclk0_default &cam1_ctrl_default>;
+		pinctrl-1 = <&cam_mclk0_active &cam1_ctrl_active>;
 	};
 
 	qcom,camera@1 {
@@ -117,6 +126,9 @@
 		qcom,sensor-type = <0>;
 		qcom,cci-master = <0>;
 		status = "ok";
+		pinctrl-names = "default", "active";
+		pinctrl-0 = <&cam_mclk2_default &cam2_ctrl_default>;
+		pinctrl-1 = <&cam_mclk2_active &cam2_ctrl_active>;
 	};
 
 };
