PATCH [7/7] sound/soc: msm: pinctrl usage
Add pinctrl state definitions and start using them in
msm soc audio driver for primary i2s.

Change-Id: I818a7899b25585852a996880fd983105c06172ce
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.mot.com/635830
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-mot-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-pinctrl.dtsi
@@ -284,6 +284,32 @@
 			};
 		};
 
+		/*  used by qcom,apq8084-audio-taiko	*/
+		/* do we really have to switch func	*/
+		pri_auxpcm_c55_default {
+			qcom,pins = <&gp 77 &gp 78 &gp 79 &gp 80>;
+			qcom,num-grp-pins = <4>;
+			qcom,pin-func = <0>;
+			label = "pri_auxpcm_c55_default";
+			pri_auxpcm_c55_default: default {
+				bias-pull-up;
+				drive-strength = <2>;
+			};
+		};
+
+		/*  used by qcom,apq8084-audio-taiko	*/
+		pri_auxpcm_c55_active {
+			qcom,pins = <&gp 77 &gp 78 &gp 79 &gp 80>;
+			qcom,num-grp-pins = <4>;
+			qcom,pin-func = <1>;
+			label = "pri_auxpcm_c55_active";
+			pri_auxpcm_c55_active: active {
+				bias-disable;
+				drive-strength = <8>;
+			};
+		};
+
+
 		/* finger print sensor spi_sck and spi_mosi */
 		fps_mosi  {
 			qcom,pins = <&gp 27 &gp 30>;
