arm: dts: 8084: mot-camera: add gpio support
Add camera TORCH_EN and FLASH_NOW gpio support.

Change-Id: I3a6daeb3696464d6642c9a85d477240bf822b567
Signed-off-by: Bryan Knottek <ebk012@motorola.com>
Reviewed-on: http://gerrit.mot.com/636156
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Elena Satraitis <w04888@motorola.com>
Reviewed-by: Robert Kubicki <w17311@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
@@ -32,13 +32,18 @@
 		label = "lm3646";
 		qcom,flash-type = <1>;
 		qcom,gpio-no-mux = <0>;
-		gpios = <&msmgpio 144 0>;
+		gpios = <&msmgpio 144 0>,
+			<&msmgpio 23 0>,
+			<&msmgpio 24 0>;
 		qcom,gpio-flash-en = <0>;
-		qcom,gpio-req-tbl-num = <0>;
-		qcom,gpio-req-tbl-flags = <0>;
-		qcom,gpio-req-tbl-label = "FLASH_EN";
+		qcom,gpio-torch-en = <1>;
+		qcom,gpio-flash-now = <2>;
+		qcom,gpio-req-tbl-num = <0 1 2>;
+		qcom,gpio-req-tbl-flags = <0 0 0>;
+		qcom,gpio-req-tbl-label = "FLASH_EN",
+				"TORCH_EN",
+				"FLASH_LED_NOW";
 		qcom,cci-master = <0>;
-		flash-now-support = <0>;
 		pinctrl-names = "default", "active";
 		pinctrl-0 = <&cam_flash_default>;
 		pinctrl-1 = <&cam_flash_active>;
