arm/dt: 8084: moto-common: add cci vddio
Allows the CCI module to enable its own IO regulator.

Change-Id: Iaadf4d9df2f3352292139751a04f7948aa0369ed
Signed-off-by: Bryan Knottek <ebk012@motorola.com>
Reviewed-on: http://gerrit.mot.com/636527
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Robert Kubicki <w17311@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -304,6 +304,10 @@
 	qcom,wdt@f9017000 {
 		qcom,bark-time = <22000>;
 	};
+
+	cci: qcom,cci@fda0C000 {
+		vddio-supply = <&pma8084_lvs4>;
+	};
 };
 
 &pma8084_lvs2 {
