--- a/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
@@ -33,16 +33,13 @@
 		qcom,flash-type = <1>;
 		qcom,gpio-no-mux = <0>;
 		gpios = <&msmgpio 144 0>,
-			<&msmgpio 23 0>,
-			<&msmgpio 24 0>;
+			<&msmgpio 23 0>;
 		qcom,gpio-flash-en = <0>;
 		qcom,gpio-torch-en = <1>;
-		qcom,gpio-flash-now = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <0 0 0>;
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <0 0>;
 		qcom,gpio-req-tbl-label = "FLASH_EN",
-				"TORCH_EN",
-				"FLASH_LED_NOW";
+				"TORCH_EN";
 		qcom,cci-master = <0>;
 		pinctrl-names = "default", "active";
 		pinctrl-0 = <&cam_flash_default>;
