shamu_defconfig: Enable BCM4356A2
Enable Broadcom BCM4356A2 on Shamu

Change-Id: I3fc3cc114a13b8ee0487596d9806c8be56ed2e6f
Signed-off-by: Ecco park <eccopark@broadcom.com>
Signed-off-by: Chris Fries <cfries@motorola.com>
Reviewed-on: http://gerrit.mot.com/637772
Submit-Approved: Jira Key <jirakey@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>

--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -257,7 +257,6 @@ CONFIG_MSM_BT_POWER=y
 CONFIG_NET_VENDOR_ATHEROS=y
 CONFIG_ATL1C=m
 CONFIG_CFG80211=y
-CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_BCM2079X=y
 CONFIG_IPC_ROUTER=y
@@ -673,3 +672,6 @@ CONFIG_PROC_DEVICETREE=y
 CONFIG_SENSORS_STM401=y
 CONFIG_ALSA_TO_H2W=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
+CONFIG_BCMDHD=y
+CONFIG_BCM4356=y
+CONFIG_BCMDHD_PCIE=y
