arm: dts: apq8084: Shamu bcm4356 gpio
Add the regulator enable GPIO for bcm4356.

Change-Id: I789da328ca99f9edc6a1ac0dcd78ac04a55620a8
Signed-off-by: Chris Fries <cfries@motorola.com>
Reviewed-on: http://gerrit.mot.com/638634
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-shamu.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu.dtsi
@@ -21,6 +21,15 @@
 	compatible = "qcom,apq8084-shamu",
 		   "qcom,apq8084-moto",
 		   "qcom,apq8084";
+
+	wifi_bcm4356 {
+		compatible = "bcm,bcm4356";
+		wl_reg_on = <&msmgpio 82 0>;
+	};
+};
+
+&soc {
+	/delete-node/ qcom,cnss@0d400000;
 };
 
 &pma8084_l22 {
