shamu_defconfig: Add BCMDHD configuration
Setup firmware/nvram paths, and DHD_USE_SCHED_SCAN.

Change-Id: I87858ae787d1ae5dbd99f7a8149cd8d9a560bafa
Signed-off-by: Chris Fries <cfries@motorola.com>
Signed-off-by: Sudhir C Vissa <fjdw67@motorola.com>
Reviewed-on: http://gerrit.mot.com/638669
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>

--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -675,3 +675,6 @@ CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_BCMDHD=y
 CONFIG_BCM4356=y
 CONFIG_BCMDHD_PCIE=y
+CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/etc/wifi/bcmdhd.cal"
+CONFIG_DHD_USE_SCHED_SCAN=y
