--- a/arch/arm/boot/dts/qcom/apq8084-shamu.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu.dtsi
@@ -14,6 +14,7 @@
 #include "apq8084-moto-common.dtsi"
 #include "dsi-panel-mot-dummy-qhd-video.dtsi"
 #include "dsi-panel-mot-smd-QHD-cmd.dtsi"
+#include "dsi-panel-mot-smd-598-1080p-cmd.dtsi"
 
 / {
 	model = "Motorola APQ 8084 Shamu";
@@ -65,6 +66,10 @@
 	qcom,dsi-pref-prim-pan = <&mot_smd_QHD_1_cmd_v0>;
 	/delete-property/ vdd-supply;
 	/delete-node/ qcom,platform-supply-entry1;
+};
+
+&mot_smd_598_1080p_cmd_v0 {
+	qcom,cont-splash-enabled;
 };
 
 &mot_smd_QHD_0_cmd_v0 {
