--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -74,6 +74,7 @@ config ARCH_APQ8084
 	select MSM_IRQ
 	select PINCTRL
 	select PINCTRL_MSM_TLMM_V3
+	select HAS_MACH_MEMUTILS
 
 config ARCH_MPQ8092
 	bool "MPQ8092"
