arm/dts: apq8084-moto: Add Max17042 Rev
Add the Revision field to the Max17042 data.  It will
be set to 1 for starts since 0 is a reset value.

Change-Id: I0f7360f63d7a4cc168480997bf045c5d19bceace
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/640512
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Kenneth Kessler <kennykessler@motorola.com>
Reviewed-by: Kumar Venkatesh <kumarv@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -826,6 +826,7 @@
 			/* Optional properties */
 			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
 			toff		= /bits/ 16 <0x251A>;	/* thermistor attribute */
+			rev		= /bits/ 16 <0x0001>;
 		};
 
 		maxim,temp-conv {
