Revert "Revert "(CR): arm/dt: 8974: Add shutdown voltage""
This reverts commit 5f144c596ed6bb51e7002a070bbfff3bee702578.
Signed-off-by: Jason Knopsnyder <jasonk@motorola.com>
Change-Id: I7c5b6be1d8b36fc26fa19bbb4d4888dec1266740
Reviewed-on: http://gerrit.mot.com/642807
Submit-Approved: Jira Key <jirakey@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Kenneth Kessler <kennykessler@motorola.com>
SLTApproved: Christopher Fries <cfries@motorola.com>

--- a/arch/arm/boot/dts/msm8974pro-moto-common.dtsi
+++ b/arch/arm/boot/dts/msm8974pro-moto-common.dtsi
@@ -644,6 +644,7 @@
 	qcom,high-ocv-correction-limit-uv = <50>;
 	qcom,hold-soc-est = <3>;
 	qcom,low-voltage-threshold = <3020000>;
+	qcom,shutdown-voltage-uv = <2750000>;
 	qcom,enable-fcc-learning = <1>;
 	qcom,min-fcc-learning-soc = <20>;
 	qcom,fcc-resolution = <10>;
