arm/dts: apq8084-moto: Add Batt PSY Name
Add the name of the battery power supply.  This will
allow the MAX17042 driver to send notifications to
the Master Battery driver designated by this name.

Change-Id: Ia08ff76a8a4ea6728d1e2b30e6b5409abe67a539
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/643778
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Kumar Venkatesh <kumarv@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -807,6 +807,7 @@
 		>;
 		maxim,enable_por_init;
 		maxim,batt_undervoltage_zero_soc;
+		maxim,batt-psy-name = "battery";
 
 		maxim,configuration {
 			/* Required properties */
