arm/dts: 8226: synaptics DTS node change for Titan
In order to support both panel suppliers using different
Synaptics touch ICs, touch driver should user power config
settings from TDAT.

Change-Id: Ia2182fe3f17a609b83a10f26779cd7a25a98f974
Signed-off-by: Konstantin Makariev <hcv867@motorola.com>
Reviewed-on: http://gerrit.mot.com/644880
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Alexander Filonenko <alexf@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
SLTApproved: Connie Zhao <czhao1@motorola.com>

--- a/arch/arm/boot/dts/msm8226-titan-common.dtsi
+++ b/arch/arm/boot/dts/msm8226-titan-common.dtsi
@@ -103,6 +103,7 @@
 			touch_vdd-supply = <&vdd_touch_vreg>;
 			synaptics,reset-on-resume;
 			synaptics,hw-reset;
+			/delete-property/ synaptics,normal-mode;
 		};
 
 		cyttsp3_i2c@3b {
