--- a/arch/arm/boot/dts/dsi-panel-mot-smd-1080p-cmd.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-mot-smd-1080p-cmd.dtsi
@@ -82,6 +82,7 @@
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
 		qcom,mdss-dsi-tx-eot-append;
+		qcom,mdss-dsi-panel-clockrate = <0>;
 		qcom,mdss-dsi-panel-timings = [b0 23 1b 00 94 93 1e 25 15 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x04>;
 		qcom,mdss-dsi-t-clk-pre = <0x1b>;
@@ -209,6 +210,7 @@
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
 		qcom,mdss-dsi-tx-eot-append;
+		qcom,mdss-dsi-panel-clockrate = <0>;
 		qcom,mdss-dsi-panel-timings = [b0 23 1b 00 94 93 1e 25 15 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x04>;
 		qcom,mdss-dsi-t-clk-pre = <0x1b>;
