arm/dts: msm8974: readjust carveout to reflect Qualcomm suggestion
We have increased the size of the modem by 9MB versus the Qualcom
reference; however, when we previously modified the memory hole to
accomodate the larger modem we appear to have taken out much more memory
than necessary. This commit readjusts things so that only 9MB are lost.
This recovers 45MB of RAM that were previously lost to the memory hole.

This change moves and shrinks ion-heap@23 /* OTHER PIL HEAP */
significantly. The size is reduced to match the size used by Qualcomm,
and the position is changed to place it contiguous with the area used by
the modem (per the Qualcomm reference).

Change-Id: I89262d7df42b3fa279bf8f03a3641746244e4cab
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.mot.com/645331
Tested-by: Jira Key <jirakey@motorola.com>
SLTApproved: Christopher Fries <cfries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/msm8974pro-moto-common.dtsi
+++ b/arch/arm/boot/dts/msm8974pro-moto-common.dtsi
@@ -65,7 +65,7 @@
 &soc {
 	qcom,ion {
 		qcom,ion-heap@23 { /* OTHER PIL HEAP */
-			qcom,memory-fixed = <0x04b00000 0x2700000>;
+			qcom,memory-fixed = <0x05100000 0x2100000>;
 		};
 
 		qcom,ion-heap@26 { /* MODEM HEAP */
@@ -1203,7 +1203,8 @@
 };
 
 &memory_hole {
-	qcom,memblock-remove = <0x04b00000 0xb400000>; /* Address and size of the hole */
+	qcom,memblock-remove = <0x05100000 0x8200000
+				0x0fa00000 0x500000>; /* Address and size of the hole */
 };
 
 &rpm_bus {
