--- a/arch/arm/configs/apq8084-perf_defconfig
+++ b/arch/arm/configs/apq8084-perf_defconfig
@@ -606,3 +606,5 @@ CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_MSM_EVENT_TIMER=y
+CONFIG_MOBICORE_SUPPORT=m
+CONFIG_MOBICORE_API=m
