--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -1130,6 +1130,14 @@
 	};
 };
 
+&hsphy0 {
+	qcom,hsphy-init = <0x00F7D9A4>;
+};
+
+&hsphy1 {
+	qcom,hsphy-init = <0x00F7D9A4>;
+};
+
 &soc {
 	/delete-node/ qcom,pcie@fc528000;
 };
