ARM: dts: msm: Add PMIC PMFERRUM devices
Add the PMIC SPMI container nodes for SID 0.
Add GPIOs and MPPs found on SPMI slave ID 0.
Add SMPS and LDO regulators found on SPMI slave ID 1.

Change-Id: I5a7bc2c8a4d254fb101886f5db51095847924b6d
Signed-off-by: Tirupathi Reddy <tirupath@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msmferrum-rumi.dts
+++ b/arch/arm/boot/dts/qcom/msmferrum-rumi.dts
@@ -32,3 +32,11 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart_console_sleep>;
 };
+
+&pmferrum_mpps {
+	status = "disabled";
+};
+
+&pmferrum_gpios {
+	status = "disabled";
+};
