--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -226,6 +226,7 @@ CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK=y
+CONFIG_HAPTIC_DRV2605=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
