--- a/arch/arm64/configs/msm8994_defconfig
+++ b/arch/arm64/configs/msm8994_defconfig
@@ -228,6 +228,7 @@ CONFIG_QSEECOM=y
 CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK=y
 CONFIG_HAPTIC_DRV2605=y
+CONFIG_SENSORS_STM401=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
