--- a/arch/arm/boot/dts/apq8084-shamu/dsi-panel-mot-smd-596-QHD-cmd.dtsi
+++ b/arch/arm/boot/dts/apq8084-shamu/dsi-panel-mot-smd-596-QHD-cmd.dtsi
@@ -14,6 +14,7 @@
 &mdss_mdp {
 	mot_smd_596_QHD_0_cmd_v0: qcom,mdss_dsi_mot_smd_596_QHD_dualmipi0_cmd_v0 {
 		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_0_596_v0";
+		compatible = "qcom,mdss-dsi-panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
@@ -24,6 +25,7 @@
 		qcom,mdss-dsi-panel-height = <2560>;
 		qcom,mdss-pan-physical-width-dimension = <65>;
 		qcom,mdss-pan-physical-height-dimension = <115>;
+		qcom,mdss-dsi-panel-clockrate = <800000000>;
 		qcom,mdss-dsi-h-front-porch = <120>;
 		qcom,mdss-dsi-h-back-porch = <44>;
 		qcom,mdss-dsi-h-pulse-width = <16>;
@@ -47,9 +49,8 @@
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
 		qcom,mdss-dsi-tx-eot-append;
-		qcom,mdss-dsi-panel-timings = [DB 34 22 00 64 66 28 38 2B 03
+		qcom,mdss-dsi-panel-timings = [D5 32 22 00 60 64 26 34 29 03
 									04 00];
-
 		qcom,mdss-dsi-hbm-on-command = [
 			/* HBM setting in 2 MSB bits of reg 53 */
 			15 01 00 00 00 00 02 53 e0];
@@ -60,7 +61,7 @@
 		qcom,mdss-dsi-dis-reset-sequence = <0 3>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-t-clk-post = <0x03>;
-		qcom,mdss-dsi-t-clk-pre = <0x29>;
+		qcom,mdss-dsi-t-clk-pre = <0x28>;
 		qcom,mdss-dsi-bl-max-level = <255>;
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
@@ -104,6 +105,7 @@
 
 	mot_smd_596_QHD_1_cmd_v0: qcom,mdss_dsi_mot_smd_596_QHD_dualmipi1_cmd_v0 {
 		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_1_596_v0";
+		compatible = "qcom,mdss-dsi-panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi1>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-destination = "display_2";
@@ -114,6 +116,7 @@
 		qcom,mdss-dsi-panel-height = <2560>;
 		qcom,mdss-pan-physical-width-dimension = <65>;
 		qcom,mdss-pan-physical-height-dimension = <115>;
+		qcom,mdss-dsi-panel-clockrate = <800000000>;
 		qcom,mdss-dsi-h-front-porch = <120>;
 		qcom,mdss-dsi-h-back-porch = <44>;
 		qcom,mdss-dsi-h-pulse-width = <16>;
@@ -138,11 +141,11 @@
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
 		qcom,mdss-dsi-tx-eot-append;
-		qcom,mdss-dsi-panel-timings = [DB 34 22 00 64 66 28 38 2B 03
+		qcom,mdss-dsi-panel-timings = [D5 32 22 00 60 64 26 34 29 03
 									04 00];
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-t-clk-post = <0x03>;
-		qcom,mdss-dsi-t-clk-pre = <0x29>;
+		qcom,mdss-dsi-t-clk-pre = <0x28>;
 		qcom,mdss-dsi-bl-max-level = <255>;
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
