--- a/arch/arm/boot/dts/apq8084-shamu/dsi-panel-mot-smd-QHD-cmd.dtsi
+++ b/arch/arm/boot/dts/apq8084-shamu/dsi-panel-mot-smd-QHD-cmd.dtsi
@@ -14,6 +14,7 @@
 &mdss_mdp {
 	mot_smd_QHD_0_cmd_v0: qcom,mdss_dsi_mot_smd_QHD_dualmipi0_cmd_v0 {
 		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_0_520_v0";
+		compatible = "qcom,mdss-dsi-panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
@@ -108,6 +109,7 @@
 
 	mot_smd_QHD_1_cmd_v0: qcom,mdss_dsi_mot_smd_QHD_dualmipi1_cmd_v0 {
 		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_1_520_v0";
+		compatible = "qcom,mdss-dsi-panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi1>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-destination = "display_2";
@@ -162,6 +164,7 @@
 
 	mot_smd_QHD_0_cmd_v1: qcom,mdss_dsi_mot_smd_QHD_dualmipi0_cmd_v1 {
 		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_0_520_v1";
+		compatible = "qcom,mdss-dsi-panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-destination = "display_1";
@@ -251,7 +254,8 @@
 	};
 
 	mot_smd_QHD_1_cmd_v1: qcom,mdss_dsi_mot_smd_QHD_dualmipi1_cmd_v1 {
-		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_1_520_v0";
+		qcom,mdss-dsi-panel-name = "mipi_mot_cmd_smd_QHD_1_520_v1";
+		compatible = "qcom,mdss-dsi-panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi1>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-destination = "display_2";
