--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -279,6 +279,7 @@ config SND_SOC_MSM8994
 	select SND_SOC_MSM_HDMI_CODEC_RX
 	select QTI_PP
 	select SND_SOC_CPE
+	select MSM_ULTRASOUND
 	help
 	 To add support for SoC audio on MSM8994.
 	 This will enable sound soc drivers which
