msm: Kconfig: select REGULATOR_RPM_SMD on msmzirc
Enable the configuration option for the rpm-smd-regulator driver so that
consumers can make requests for RPM controlled regulators.

Change-Id: Ia00a713b908c50ca119473ad3f09d551bccdcfea
Signed-off-by: Ke Liu <keliu@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -209,6 +209,7 @@ config ARCH_MSMZIRC
 	select ARM_GIC
 	select CPU_V7
 	select REGULATOR
+	select REGULATOR_RPM_SMD
 	select HAVE_ARM_ARCH_TIMER
 	select MSM_RPM_SMD
 	select MSM_SPM_V2
