--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -53,7 +53,9 @@
 		android,ramoops-buffer-start = <0x3eae0000>;
 		android,ramoops-buffer-size = <0x100000>;
 		android,ramoops-console-size = <0x80000>;
+		android,ramoops-record-size = <0x7F800>;
 		android,ramoops-annotate-size = <0x800>;
+		android,ramoops-dump-oops = <0x1>;
 		android,ramoops-hole {
 			compatible = "qcom,msm-contig-mem";
 			qcom,memblock-reserve = <0x3eae0000 0x100000>;
