ARM: dts: msm: add entry for the tomtom codec in the 8939
Update the entries of the tomtom codec in the 8939 dtsi file
to add support for the tomtom codec as an external codec.
Add the regulator entry for the various spk drv gpio which
drives the supply to the speaker. This abstract the power
supply behind the regulator rather than gpio and makes
the implementation consistent across the hardwares.

Change-Id: I861a578ee68057902563c7441eaee66bcd0b9f6e
Signed-off-by: Aviral Gupta <aviralg@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8939-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-regulator.dtsi
@@ -49,6 +49,14 @@
 /* Memory accelerator and CPR controlled regulators */
 
 &soc {
+	spk_vreg: regulator_spk {
+		compatible = "regulator-fixed";
+		regulator-name = "spk_vreg";
+		startup-delay-us = <0>;
+		enable-active-high;
+		gpio = <&msm_gpio 121 0>;
+	};
+
 	mem_acc_vreg_corner: regulator@1942130 {
 		compatible = "qcom,mem-acc-regulator";
 		reg = <0x1942130 0x4>, <0x58000 0x1000>;
