--- a/arch/arm/boot/dts/qcom/msm8939-audio-external_codec.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-audio-external_codec.dtsi
@@ -26,22 +26,17 @@
 		qcom,model = "msm8939-tapan-snd-card";
 		qcom,tapan-mclk-clk-freq = <9600000>;
 		pinctrl-names = "cdc_slim_lines_act", "cdc_slim_lines_sus",
-				"cross_conn_det_act","cross_conn_det_sus",
-				"cdc_vdd_spkr_act","cdc_vdd_spkr_sus";
+				"cross_conn_det_act","cross_conn_det_sus";
 		pinctrl-0 = <&cdc_slim_lines_act>;
 		pinctrl-1 = <&cdc_slim_lines_sus>;
 		pinctrl-2 = <&cross_conn_det_act>;
 		pinctrl-3 = <&cross_conn_det_sus>;
-		pinctrl-4 = <&cdc_vdd_spkr_act>;
-		pinctrl-5 = <&cdc_vdd_spkr_sus>;
 		qcom,cdc-us-euro-gpios = <&msm_gpio 120 0>;
-		qcom,cdc-vdd-spkr-gpios = <&msm_gpio 121 0>;
 		qcom,headset-jack-type-NC;
 		qcom,audio-routing =
 			"RX_BIAS", "MCLK",
 			"LDO_H", "MCLK",
 			"SPK_OUT", "MCLK",
-			"SPK_OUT", "EXT_VDD_SPKR",
 			"AMIC1", "MIC BIAS1 External",
 			"MIC BIAS1 External", "Handset Mic",
 			"AMIC2", "MIC BIAS2 External",
@@ -59,6 +54,50 @@
 			"DMIC4", "MIC BIAS3 External",
 			"MIC BIAS3 External", "Digital Mic4";
 	};
+
+	sound-9330 {
+		compatible = "qcom,msm8939-audio-codec";
+		qcom,model = "msm8939-tomtom9330-snd-card";
+
+		pinctrl-names = "cdc_slim_lines_act", "cdc_slim_lines_sus",
+				"cross_conn_det_act", "cross_conn_det_sus";
+		pinctrl-0 = <&cdc_slim_lines_act>;
+		pinctrl-1 = <&cdc_slim_lines_sus>;
+		pinctrl-2 = <&cross_conn_det_act>;
+		pinctrl-3 = <&cross_conn_det_sus>;
+		qcom,cdc-us-euro-gpios = <&msm_gpio 120 0>;
+		qcom,headset-jack-type-NC;
+		qcom,audio-routing =
+			"RX_BIAS", "MCLK",
+			"LDO_H", "MCLK",
+			"SPK_OUT", "MCLK",
+			"AIF4 MAD", "MCLK",
+			"AMIC1", "MIC BIAS1 Internal1",
+			"MIC BIAS1 Internal1", "Handset Mic",
+			"AMIC2", "MIC BIAS2 External",
+			"MIC BIAS2 External", "Headset Mic",
+			"AMIC3", "MIC BIAS2 External",
+			"MIC BIAS2 External", "ANCRight Headset Mic",
+			"AMIC4", "MIC BIAS2 External",
+			"MIC BIAS2 External", "ANCLeft Headset Mic",
+			"DMIC1", "MIC BIAS1 External",
+			"MIC BIAS1 External", "Digital Mic1",
+			"DMIC2", "MIC BIAS1 External",
+			"MIC BIAS1 External", "Digital Mic2",
+			"DMIC3", "MIC BIAS3 External",
+			"MIC BIAS3 External", "Digital Mic3",
+			"DMIC4", "MIC BIAS3 External",
+			"MIC BIAS3 External", "Digital Mic4",
+			"DMIC5", "MIC BIAS4 External",
+			"MIC BIAS4 External", "Digital Mic5",
+			"DMIC6", "MIC BIAS4 External",
+			"MIC BIAS4 External", "Digital Mic6";
+	};
+
+	qcom,msm-cpe-lsm {
+		compatible = "qcom,msm-cpe-lsm";
+	};
+
 };
 
 &slim_msm {
@@ -95,11 +134,14 @@
 		qcom,cdc-vdd-cx-voltage = <1200000 1200000>;
 		qcom,cdc-vdd-cx-current = <10000>;
 
+		cdc-vdd-spkdrv-supply = <&spk_vreg>;
+
 		qcom,cdc-static-supplies = "cdc-vdd-tx-h",
 					   "cdc-vdd-rx-h",
 					   "cdc-vdd-px",
 					   "cdc-vdd-cx";
 		qcom,cdc-cp-supplies = "cdc-vdd-buck";
+		qcom,cdc-on-demand-supplies = "cdc-vdd-spkdrv";
 
 		qcom,cdc-micbias-ldoh-v = <0x3>;
 		qcom,cdc-micbias-cfilt1-mv = <1800>;
@@ -116,4 +158,68 @@
 		qcom,cdc-slim-ifd = "tapan-slim-ifd";
 		qcom,cdc-slim-ifd-elemental-addr = [00 00 E0 00 17 02];
 	};
+
+	tomtom_codec {
+		compatible = "qcom,tomtom-slim-pgd";
+		elemental-addr = [00 01 30 01 17 02];
+
+		interrupt-parent = <&wcd9xxx_intc>;
+		interrupts = <0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
+			17 18 19 20 21 22 23 24 25 26 27 28 29
+			30 31>;
+
+		qcom,cdc-reset-gpio = <&msm_gpio 67 0>;
+
+		qcom,cdc-micbias1-ext-cap;
+		qcom,cdc-micbias2-ext-cap;
+
+		cdc-vdd-buck-supply = <&pm8916_s4>;
+		qcom,cdc-vdd-buck-voltage = <1800000 2150000>;
+		qcom,cdc-vdd-buck-current = <650000>;
+
+		cdc-vdd-tx-h-supply = <&pm8916_l5>;
+		qcom,cdc-vdd-tx-h-voltage = <1800000 1800000>;
+		qcom,cdc-vdd-tx-h-current = <45000>;
+
+		cdc-vdd-rx-h-supply = <&pm8916_l5>;
+		qcom,cdc-vdd-rx-h-voltage = <1800000 1800000>;
+		qcom,cdc-vdd-rx-h-current = <45000>;
+
+		cdc-vdd-px-supply = <&pm8916_l5>;
+		qcom,cdc-vdd-px-voltage = <1800000 1800000>;
+		qcom,cdc-vdd-px-current = <45000>;
+
+		cdc-vddcx-1-supply = <&pm8916_l2>;
+		qcom,cdc-vddcx-1-voltage = <1200000 1200000>;
+		qcom,cdc-vddcx-1-current = <33000>;
+
+		cdc-vddcx-2-supply = <&pm8916_s3>;
+		qcom,cdc-vddcx-2-voltage = <1300000 1300000>;
+		qcom,cdc-vddcx-2-current = <20000>;
+
+		cdc-vdd-spkdrv-supply = <&spk_vreg>;
+
+		qcom,cdc-static-supplies = "cdc-vdd-tx-h",
+			"cdc-vdd-rx-h",
+			"cdc-vdd-px",
+			"cdc-vddcx-1",
+			"cdc-vddcx-2";
+
+		qcom,cdc-cp-supplies = "cdc-vdd-buck";
+		qcom,cdc-on-demand-supplies = "cdc-vdd-spkdrv";
+		qcom,cdc-micbias-ldoh-v = <0x3>;
+		qcom,cdc-micbias-cfilt1-mv = <1800>;
+		qcom,cdc-micbias-cfilt2-mv = <2700>;
+		qcom,cdc-micbias-cfilt3-mv = <1800>;
+		qcom,cdc-micbias1-cfilt-sel = <0x0>;
+		qcom,cdc-micbias2-cfilt-sel = <0x1>;
+		qcom,cdc-micbias3-cfilt-sel = <0x2>;
+		qcom,cdc-micbias4-cfilt-sel = <0x2>;
+		qcom,cdc-mclk-clk-rate = <9600000>;
+		qcom,cdc-slim-ifd = "tomtom-slim-ifd";
+		qcom,cdc-slim-ifd-elemental-addr = [00 00 30 01 17 02];
+		qcom,cdc-dmic-sample-rate = <4800000>;
+		qcom,cdc-variant = "WCD9330";
+	};
+
 };
