ARM: dts: msm: enable ULPS mode for smd 596 qhd cmd mode panel
Ultra-Low Power State (ULPS) is a defined as part of the MIPI DPHY
specification where the data and the clock lanes enter the LP00
state. This could result in power savings on the rails used to supply
power to the panels. Enable this mode for smd 596 qhd command
mode panel

Change-Id: I38b8cb4b2f1bdc48683b3df62ba9783624182c16
Signed-off-by: Aravind Venkateswaran <aravindh@codeaurora.org>

--- a/arch/arm/boot/dts/apq8084-shamu/dsi-panel-mot-smd-596-QHD-cmd.dtsi
+++ b/arch/arm/boot/dts/apq8084-shamu/dsi-panel-mot-smd-596-QHD-cmd.dtsi
@@ -99,6 +99,7 @@
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 
 		qcom,panel-esd-power-mode-chk = <0x94>;
+		qcom,ulps-enabled;
 	};
 
 	mot_smd_596_QHD_1_cmd_v0: qcom,mdss_dsi_mot_smd_596_QHD_dualmipi1_cmd_v0 {
@@ -152,5 +153,6 @@
 		qcom,mdss-dsi-te-dcs-command = <1>;
 		qcom,mdss-dsi-te-check-enable;
 		qcom,mdss-dsi-te-using-te-pin;
+		qcom,ulps-enabled;
 	};
 };
