arm/dt: otus: Correct lane map entries
- Correct mipi dsi lane maps which have lanes 0 and 3 not connected.
- Corrected reset sequence property names

Change-Id: Ic7ffe71a7e097e22e627ef41d00cdbfb4cd00d41
Signed-off-by: Ashwin Pathmudi <jfxr63@motorola.com>
Reviewed-on: http://gerrit.mot.com/663029
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Varun Shrivastava <varunshrivastava@motorola.com>
Reviewed-by: Sudharsan Yettapu <sudharsan.yettapu@motorola.com>
Reviewed-by: Bang Nguyen <bangnguyen@motorola.com>
Reviewed-by: Stephen Rossbach <rossbach@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>
SLTApproved: Robert Neely <wrn002@motorola.com>

--- a/arch/arm/boot/dts/dsi-panel-mot-boe-450-qHD-video.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-mot-boe-450-qHD-video.dtsi
@@ -95,7 +95,9 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
-		qcom,mdss-dsi-reset-sequence = <1 2>, <0 1>, <1 21>;
+		qcom,mdss-dsi-lane-map = "lane_map_3012";
+		qcom,panel-en-reset-sequence = <1 2>, <0 1>, <1 21> ;
+		qcom,panel-dis-reset-sequence = <0 1>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-tx-eot-append;
 	};
@@ -178,7 +180,9 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
-		qcom,mdss-dsi-reset-sequence = <1 2>, <0 1>, <1 21>;
+		qcom,mdss-dsi-lane-map = "lane_map_3012";
+		qcom,panel-en-reset-sequence = <1 2>, <0 1>, <1 21> ;
+		qcom,panel-dis-reset-sequence = <0 1>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-tx-eot-append;
 	};
@@ -292,7 +296,9 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
-		qcom,mdss-dsi-reset-sequence = <1 2>, <0 1>, <1 21>;
+		qcom,mdss-dsi-lane-map = "lane_map_3012";
+		qcom,panel-en-reset-sequence = <1 2>, <0 1>, <1 21> ;
+		qcom,panel-dis-reset-sequence = <0 1>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-tx-eot-append;
 	};
