--- a/arch/x86/configs/fugu_defconfig
+++ b/arch/x86/configs/fugu_defconfig
@@ -43,6 +43,7 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_SMP=y
 CONFIG_X86_INTEL_MID=y
 CONFIG_X86_INTEL_MID_FUGU=y
+CONFIG_FUGU_LED=y
 CONFIG_ATOM_SOC_POWER=y
 CONFIG_INTEL_DEBUG_FEATURE=y
 CONFIG_X86_INTEL_OSC_CLK=y
