fugu: asustek: added led driver and device
Enable LED breathing effect with 40/256 duty cycle in
default. The LED is set to be controlled by software.
There are a total 256 duty cycle steps, and each step
is generated over the course of 256 RTC clock cycles.

Bug: 16846098

Change-Id: Iabd682b23f5aedcce88afe7383348509e4a3205b
Signed-off-by: paris_yeh <paris_yeh@asus.com>
Signed-off-by: Patrick Tjin <pattjin@google.com>

Conflicts:
	arch/x86/platform/intel-mid/fugu/Kconfig
	arch/x86/platform/intel-mid/fugu/Makefile

--- a/arch/x86/platform/intel-mid/fugu/Kconfig
+++ b/arch/x86/platform/intel-mid/fugu/Kconfig
@@ -10,3 +10,9 @@ config FUGU_WIFI_PLATFORM_DATA
 	bool "Enable Fugu WiFi platform data"
 	---help---
 	  Enables platform_fugu_wifi
+
+config FUGU_LED
+	depends on X86_INTEL_MID_FUGU
+	bool "fugu led driver"
+	help
+	  This driver provides the access to control fugu led.
