--- a/arch/x86/platform/intel-mid/fugu/Makefile
+++ b/arch/x86/platform/intel-mid/fugu/Makefile
@@ -1,4 +1,5 @@
 # ASUSTek fugu-specific drivers/devices (eg, ASUSTek GPIO pins)
 obj-$(CONFIG_ASUSTEK_PCBID) += asustek-pcbid.o devices_asustek.o
 obj-$(CONFIG_FUGU_WIFI_PLATFORM_DATA) += platform_fugu_wifi.o
+obj-$(CONFIG_FUGU_LED)      += fugu_led.o platform_fugu_led.o
 
