--- a/arch/arm/boot/dts/apq8026-lenok/apq8026-lenok-input.dtsi
+++ b/arch/arm/boot/dts/apq8026-lenok/apq8026-lenok-input.dtsi
@@ -49,7 +49,7 @@
 			synaptics,check-build;
 			synaptics,wakeup;
 			synaptics,palm-detect-threshold = <0xd>;
-			synaptics,palm-detect-keycode = <0x66>; /* KEY_HOME */
+			synaptics,palm-detect-keycode = <0x8e>; /* KEY_SLEEP */
 			synaptics,doze-interval-active = <3>; /* 30ms */
 			synaptics,doze-interval-sleep = <5>; /* 50ms */
 			status = "ok";
