--- a/arch/arm/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994.dtsi
@@ -76,6 +76,9 @@
 			      compatible = "arm,arch-cache";
 			      cache-level = <2>;
 			      power-domain = <&l2ccc_0>;
+			      L2_tlb_0: l2-tlb {
+					qcom,dump-size = <0x4000>;
+				};
 			};
 		};
 
@@ -117,7 +120,17 @@
 			      compatible = "arm,arch-cache";
 			      cache-level = <2>;
 			      power-domain = <&l2ccc_1>;
+			      L2_tlb_1: l2-tlb {
+					qcom,dump-size = <0x4000>;
+			      };
 			};
+			L1_itlb_100: l1-itlb {
+				qcom,dump-size = <0x400>;
+			};
+			L1_dtlb_100: l1-dtlb {
+				qcom,dump-size = <0x400>;
+			};
+
 		};
 
 		CPU5: cpu@101 {
@@ -127,6 +140,12 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc5>;
 			next-level-cache = <&L2_1>;
+			L1_itlb_101: l1-itlb {
+				qcom,dump-size = <0x400>;
+			};
+			L1_dtlb_101: l1-dtlb {
+				qcom,dump-size = <0x400>;
+			};
 		};
 
 		CPU6: cpu@102 {
@@ -136,6 +155,12 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc6>;
 			next-level-cache = <&L2_1>;
+			L1_itlb_102: l1-itlb {
+				qcom,dump-size = <0x400>;
+			};
+			L1_dtlb_102: l1-dtlb {
+				qcom,dump-size = <0x400>;
+			};
 		};
 
 		CPU7: cpu@103 {
@@ -145,6 +170,12 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc7>;
 			next-level-cache = <&L2_1>;
+			L1_itlb_103: l1-itlb {
+				qcom,dump-size = <0x400>;
+			};
+			L1_dtlb_103: l1-dtlb {
+				qcom,dump-size = <0x400>;
+			};
 		};
 	};
 
@@ -2814,6 +2845,51 @@
 			qcom,ssrestart-string = "modem";
 		};
 	};
+
+	cpuss_dump {
+		compatible = "qcom,cpuss-dump";
+		qcom,itlb_dump100 {
+			qcom,dump-node = <&L1_itlb_100>;
+			qcom,dump-id = <0x24>;
+		};
+		qcom,itlb_dump101 {
+			qcom,dump-node = <&L1_itlb_101>;
+			qcom,dump-id = <0x25>;
+		};
+		qcom,itlb_dump102 {
+			qcom,dump-node = <&L1_itlb_102>;
+			qcom,dump-id = <0x26>;
+		};
+		qcom,itlb_dump103 {
+			qcom,dump-node = <&L1_itlb_103>;
+			qcom,dump-id = <0x27>;
+		};
+		qcom,dtlb_dump100 {
+			qcom,dump-node = <&L1_dtlb_100>;
+			qcom,dump-id = <0x44>;
+		};
+		qcom,dtlb_dump101 {
+			qcom,dump-node = <&L1_dtlb_101>;
+			qcom,dump-id = <0x45>;
+		};
+		qcom,dtlb_dump102 {
+			qcom,dump-node = <&L1_dtlb_102>;
+			qcom,dump-id = <0x46>;
+		};
+		qcom,dtlb_dump103 {
+			qcom,dump-node = <&L1_dtlb_103>;
+			qcom,dump-id = <0x47>;
+		};
+		qcom,l2_tlb_dump0 {
+			qcom,dump-node = <&L2_tlb_0>;
+			qcom,dump-id = <0x120>;
+		};
+		qcom,l2_tlb_dump100 {
+			qcom,dump-node = <&L2_tlb_1>;
+			qcom,dump-id = <0x121>;
+		};
+	};
+
 };
 
 &gdsc_usb30 {
