anthias: performance: remove debug and useless config
Change-Id: Ib955ce29755a5ff3571c1ba0b38f1f614afd0069
Reviewed-on: http://mcrd1-22-pc.corpnet.asus/code-review/master/142247
Reviewed-by: allen1_huang <allen1_huang@asus.com>
Tested-by: allen1_huang <allen1_huang@asus.com>

--- a/arch/arm/configs/WI500Q_User_msm8226-perf_defconfig
+++ b/arch/arm/configs/WI500Q_User_msm8226-perf_defconfig
@@ -252,7 +252,7 @@ CONFIG_INPUT_GPIO=m
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_MSM_HSL=y
-CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+# CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 CONFIG_SERIAL_MSM_SMD=y
 CONFIG_DIAG_CHAR=y
 CONFIG_HW_RANDOM=y
@@ -270,7 +270,6 @@ CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
-CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_POWER_SUPPLY=y
@@ -283,6 +282,7 @@ CONFIG_SENSORS_QPNP_ADC_CURRENT=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_THERMAL_MONITOR=y
+CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9306_CODEC=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
@@ -291,7 +291,7 @@ CONFIG_REGULATOR_ONSEMI_NCP6335D=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_QPNP=y
 CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_CAMERA_SUPPORT=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
@@ -299,16 +299,16 @@ CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
-CONFIG_MSMB_CAMERA=y
-CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_MSM_CPP=y
-CONFIG_MSM_CCI=y
-CONFIG_MSM_CSI30_HEADER=y
-CONFIG_MSM_CSIPHY=y
-CONFIG_MSM_CSID=y
-CONFIG_MSM_EEPROM=y
-CONFIG_MSM_ISPIF=y
-CONFIG_MT9M114=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSMB_CAMERA=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_CAMERA_SENSOR=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_CPP=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_CCI=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_CSI30_HEADER=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_CSIPHY=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_CSID=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_EEPROM=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MSM_ISPIF=y
+#+++ASUS_BSP: mask for Robin: CONFIG_MT9M114=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
 # CONFIG_MSM_WFD=n
