--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -212,7 +212,7 @@
                 rpm-channel-type = <15>; /* SMD_APPS_RPM */
         };
 
-	qcom,bam_dmux@4044000 {
+	bam_dmux: qcom,bam_dmux@4044000 {
 		compatible = "qcom,bam_dmux";
 		reg = <0x4044000 0x19000>;
 		interrupts = <0 29 1>;
