--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -1111,6 +1111,7 @@
 		pinctrl-names = "default", "sleep";
 		pinctrl-0 = <&hsuart_active>;
 		pinctrl-1 = <&hsuart_sleep>;
+		status = "disabled";
 	};
 
 	qcom,venus@1de0000 {
