--- a/arch/arm/configs/WI500Q_User_msm8226-perf_defconfig
+++ b/arch/arm/configs/WI500Q_User_msm8226-perf_defconfig
@@ -254,7 +254,7 @@ CONFIG_INPUT_GPIO=m
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 CONFIG_SERIAL_MSM_SMD=y
-CONFIG_DIAG_CHAR=y
+# CONFIG_DIAG_CHAR is not set
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_SMD_PKT=y
