ARM: dts: msm: Configure thermal cluster info separately for MSM8936
MSM8936 and MSM8939 share the same KTM configuration, but MSM8936
is a single cluster with quad core unlike octa core MSM8939.
Configure thermal cluster info separately for MSM8936 so that KTM
cluster mitigation for this target works properly.

Change-Id: Idf6b5f7acf66fc99994d14a7f677910ba6ce7e97
Signed-off-by: Manaf Meethalavalappu Pallikunhi <manafm@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8936.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8936.dtsi
@@ -212,4 +212,9 @@
 		qcom,irq-is-percpu;
 		interrupts = <1 7 0xf000>;
 	};
+
+	qcom,msm-thermal {
+		qcom,synchronous-cluster-id = <0>;
+		qcom,synchronous-cluster-map = <0 0x0F>;
+	};
 };
