ARM: dts: msm: Add ultra low latency support
Add ultra low latency support on 8994 to enable
low latency audio usecases.

Change-Id: Ib135f1211e361e94a074381ba292ac93b4eeaf88
Signed-off-by: Sudheer Papothi <spapothi@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994.dtsi
@@ -2212,6 +2212,13 @@
 		compatible = "qcom,msm-pcm-lpa";
 	};
 
+	qcom,msm-ultra-low-latency {
+		compatible = "qcom,msm-pcm-dsp";
+		qcom,msm-pcm-dsp-id = <2>;
+		qcom,msm-pcm-low-latency;
+		qcom,latency-level = "ultra";
+	};
+
 	qcom,msm-pcm-low-latency {
 		compatible = "qcom,msm-pcm-dsp";
 		qcom,msm-pcm-dsp-id = <1>;
