ARM: dts: msm: enable partial update on 8994 CDP
Add partial update property for JDI panel nodes.
Add ROI alignment parameters for this these two
panels.

Change-Id: Ia3584527e8760279762f1201fd4185ec01d40b50
Signed-off-by: Chandan Uddaraju <chandanu@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8994-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-cdp.dtsi
@@ -330,10 +330,14 @@
 	qcom,mdss-dsi-bl-min-level = <1>;
 	qcom,mdss-dsi-bl-max-level = <4095>;
 	qcom,cont-splash-enabled;
+	qcom,partial-update-enabled;
+	qcom,panel-roi-alignment = <4 4 2 2 20 20>;
 };
 
 &dsi_dual_jdi_cmd_1 {
 	qcom,cont-splash-enabled;
+	qcom,partial-update-enabled;
+	qcom,panel-roi-alignment = <4 4 2 2 20 20>;
 };
 
 &pmx_hdmi_cec {
