ARM: dts: msm: config cont splash memory handle for msm8994
Replace continuous splash memory address and size's duplicate
entry with memory handle for MSM8994 target.

Change-Id: I3aa09c9f6eefff179f0ce04bb9be93d3dcc2edef
Signed-off-by: Dhaval Patel <pdhaval@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8994-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mdss.dtsi
@@ -150,7 +150,9 @@
 		mdss_fb0: qcom,mdss_fb_primary {
 			cell-index = <0>;
 			compatible = "qcom,mdss-fb";
-			qcom,memblock-reserve = <0x03400000 0x02200000>;
+			qcom,cont-splash-memory {
+				linux,contiguous-region = <&cont_splash_mem>;
+			};
 		};
 
 		mdss_fb1: qcom,mdss_fb_external {
