--- a/arch/arm/boot/dts/qcom/msm8994-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mdss.dtsi
@@ -109,7 +109,7 @@
 		qcom,mdss-pingpong-off = <0x00071000 0x00071800 0x00072000
 					  0x00072800>;
 		qcom,mdss-ad-off = <0x0079000 0x00079800 0x0007A000>;
-
+		qcom,mdss-highest-bank-bit = <0x3>;
 		qcom,mdss-has-decimation;
 		qcom,mdss-has-rotator-downscale;
 		qcom,mdss-has-bwc;
